Beslutter og Veileder har en AzureOid